--- a/package.json
+++ b/package.json
@@ -4,6 +4,6 @@
     "esbuild-plugin-import-glob": "^0.1.1"
   },
   "scripts": {
-    "build": "esbuild src/index.js --bundle --outfile=dist/main.js"
+    "build": "node build.js"
   }
 }
