--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "esbuild": "^0.14.51",
-    "esbuild-plugin-import-glob": "^0.1.1"
+    "esbuild-plugin-import-glob": "^0.1.1",
+    "nunjucks": "^3.2.3"
   },
   "scripts": {
     "build": "node build.js"
