--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "custom-select": "^1.1.15",
     "esbuild": "^0.14.51",
     "esbuild-plugin-import-glob": "^0.1.1",
+    "npm-run-all": "^4.1.5",
     "nunjucks": "^3.2.3",
     "sass": "^1.54.0"
   },
