Fix package.json syntax

--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
     "resources": "cpy --cwd src resources/ ../site/",
     "js": "node esbuild.js",
     "build": "npm-run-all --parallel html css resources js",
-    "watch_css": "sass --watch --style compressed src/css/index.scss site/dist/css/style.css",
+    "watch_css": "sass --watch --style compressed src/css/index.scss site/dist/css/style.css"
   }
 }
