--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "cpy-cli": "^4.1.0",
     "custom-select": "^1.1.15",
+    "discord-markdown": "^2.5.1",
     "esbuild": "^0.14.51",
     "esbuild-plugin-import-glob": "^0.1.1",
     "npm-run-all": "^4.1.5",
